[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-delivery-warden"
version = "0.1.0"
description = "A local quality gate for AI-generated product and code deliveries."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Miao" }]
keywords = ["ai", "coding-agent", "code-review", "quality-gate", "delivery"]

[project.scripts]
ai-delivery-warden = "ai_delivery_warden.cli:main"
warden = "ai_delivery_warden.cli:main"

[tool.setuptools.packages.find]
include = ["ai_delivery_warden*"]
